# frontmcp

./: .coderabbit.yaml  .gitignore  .nycrc.json  .prettierignore  .prettierrc  .release-docs-base  .snyk  .yarnrc.yml  AGENTS.md  BREAKING_CHANGES.v1.md  BROWSER.plan.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TEST_COVERAGE.md  TEST_SUMMARY.md  breaking-changes.v1.json  eslint.config.mjs  eslint.imports.mjs  jest.coverage.preset.js  jest.e2e.coverage.preset.js  jest.imports-mapper.js  jest.preset.js  nx.json  package.json  probe-ss.mts  project.json  tsconfig.base.json
.claude/: settings.local.json
.codex-docs/: patches.json
.github/: DOCS_VERSION_STRATEGY.md  RELEASE_WORKFLOW.md  UPDATES_FORMAT.md
browser-poc/: README.md  TASKS.md
crates/: Cargo.toml
crates/frontmcp-tui/: Cargo.toml  README.md  project.json
crates/frontmcp-tui/src/: app.rs  main.rs
crates/frontmcp-tui/src/event/: mod.rs  reader.rs  socket_client.rs  trace_events_test.rs  types.rs
crates/frontmcp-tui/src/input/: mod.rs
crates/frontmcp-tui/src/state/: mod.rs  store.rs
crates/frontmcp-tui/src/ui/: help_overlay.rs  key_hints.rs  layout.rs  mod.rs  overview.rs  quit_dialog.rs  status_bar.rs
crates/frontmcp-tui/src/ui/tabs/: activity.rs  ai_insight.rs  graph.rs  logs.rs  metrics.rs  mod.rs  playground.rs  sessions.rs
docs/: docs.draft.json  docs.json  docs.v2.json  index.mdx  updates.mdx
scripts/: apply-doc-patches.mjs  archive-and-publish-docs.mjs  build-browser-umd.mjs  bump-synchronized-versions.mjs  bump-version.mjs  coverage-status.mjs  (+19 more)
(+6719 files in other folders)
