[workspace]
resolver = "2"
members = ["frontmcp-tui"]

[workspace.package]
version = "0.7.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anthropics/frontmcp"

[workspace.dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
unicode-width = "0.2"
